[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/ScoreList.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/font/kenney_pixel_20.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="NewRecord" type="Control"]
margin_right = 161.0
margin_bottom = 16.0
grow_horizontal = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 161.0
margin_bottom = 16.0
grow_horizontal = 2
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 161.0
margin_bottom = 16.0
grow_horizontal = 2
custom_constants/separation = 60
alignment = 1

[node name="RankPosition" type="Label" parent="PanelContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 16.0
grow_horizontal = 0
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
uppercase = true

[node name="HBoxScores" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 94.0
margin_bottom = 16.0
grow_horizontal = 2
alignment = 1

[node name="Label1" type="Label" parent="PanelContainer/HBoxContainer/HBoxScores"]
margin_right = 7.0
margin_bottom = 16.0
custom_colors/font_outline_modulate = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 3 )
text = "A"
align = 1
valign = 1

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/HBoxScores"]
margin_left = 11.0
margin_right = 18.0
margin_bottom = 16.0
custom_colors/font_color_shadow = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 3 )
text = "A"
align = 1
valign = 1

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/HBoxScores"]
margin_left = 22.0
margin_right = 29.0
margin_bottom = 16.0
custom_colors/font_color_shadow = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 3 )
text = "A"
align = 1
valign = 1

[node name="PlayerScore" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 161.0
margin_bottom = 16.0
size_flags_horizontal = 0
custom_colors/font_color_shadow = Color( 0.815686, 0.411765, 0.0862745, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
uppercase = true
